--- a/mapboxcss.html
+++ b/mapboxcss.html
@@ -70,7 +70,7 @@
     var truckMarker;
     var dropofMarker;
       // Add your access token
-      mapboxgl.accessToken = 'pk.eyJ1Ijoic2h1Ymh1MTFoaSIsImEiOiJja2tza2phdmQwaTNoMnZvaXJrczBoODBqIn0.rlKtKeUZavBHMVLRWPZwUQ';
+      mapboxgl.accessToken = 'YOUR_API_KEY';
 
 
 function getRandomColor() {
